--- a/mods/bookshelf.pw.toml
+++ b/mods/bookshelf.pw.toml
@@ -1,13 +1,13 @@
 name = "Bookshelf"
-filename = "Bookshelf-Fabric-1.19.2-16.1.9.jar"
+filename = "Bookshelf-Fabric-1.19.2-16.2.18.jar"
 side = "both"
 
 [download]
-hash-format = "sha1"
-hash = "95189f168962b5a4e9c15f4c1b428069fddd861e"
+hash-format = "md5"
+hash = "a125e81bf303aff113205e5ed79091fd"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4033121
+file-id = 4426590
 project-id = 228525
