--- a/mods/enchantment-descriptions.pw.toml
+++ b/mods/enchantment-descriptions.pw.toml
@@ -1,13 +1,13 @@
 name = "Enchantment Descriptions"
-filename = "EnchantmentDescriptions-Fabric-1.19.2-13.0.12.jar"
+filename = "EnchantmentDescriptions-Fabric-1.19.2-13.0.14.jar"
 side = "both"
 
 [download]
-hash-format = "sha1"
-hash = "2b87c927a871f954fa2b79714b2263f2ee0fd0e9"
+hash-format = "md5"
+hash = "84f7ee58724fee3c5e694e19d82c3b27"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4178433
+file-id = 4277355
 project-id = 250419
