--- a/mods/origins-classes.pw.toml
+++ b/mods/origins-classes.pw.toml
@@ -3,11 +3,11 @@ filename = "Origins-Classes-1.19-1.4.0.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/FiDptjtR/versions/1.4.0/Origins-Classes-1.19-1.4.0.jar"
 hash-format = "sha1"
 hash = "0e789bc4f5c5150f5e62b5955adce8b528aabcda"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 3827906
-project-id = 401833
+[update.modrinth]
+mod-id = "FiDptjtR"
+version = "9ATzOPjO"
